# cmake_examples

cmake/demo/: CMakeLists.txt
cmake/demo/src/: main.c  testFunc1.c
cmake/demo2/testFunc/: testFunc.c
cmake/demo3/: CMakeLists.txt
cmake/demo4/: CMakeLists.txt
cmake/demo5/: CMakeLists.txt
cmake/demo5/src/: CMakeLists.txt  main1.c  main2.c
cmake/demo6/: CMakeLists.txt
cmake2/cmake-demo/Demo4/: CMakeLists.txt
cmake2/cmake-demo/Demo5/: CMakeLists.txt
